eks/karpenter/karpenter.yaml
# Source: karpenter/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: karpenter
  namespace: karpenter
  labels:
    helm.sh/chart: karpenter-v0.25.0
    app.kubernetes.io/name: karpenter
    app.kubernetes.io/instance: karpenter
    app.kubernetes.io/version: "0.25.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - name: http-metrics
    port: 8080
    targetPort: http-metrics
    protocol: TCP
  - name: https-webhook
    port: 443
    targetPort: https-webhook
    protocol: TCP
  selector:
    app.kubernetes.io/name: karpenter
    app.kubernetes.io/instance: karpenter
---
# Source: karpenter/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karpenter
  namespace: karpenter
  labels:
    helm.sh/chart: karpenter-v0.25.0
    app.kubernetes.io/name: karpenter
    app.kubernetes.io/instance: karpenter
    app.kubernetes.io/version: "0.25.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: karpenter
      app.kubernetes.io/instance: karpenter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: karpenter
        app.kubernetes.io/instance: karpenter
      annotations:
        checksum/settings: c7d2533d26a546d9a9cc504ac13faa052a0790bcaaac1b0ee7e7f225eba79409
    spec:
      serviceAccountName: karpenter
      securityContext:
        fsGroup: 1000
      priorityClassName: "system-cluster-critical"
      dnsPolicy: Default
      containers:
      - name: controller
        image: public.ecr.aws/karpenter/controller:v0.25.0@sha256:fefae2739efa1c4d9561069d1683a0ed201e41771351da1ef504c805941f0bf2
        imagePullPolicy: IfNotPresent
        ports:
        - name: http-metrics
          containerPort: 8080
          protocol: TCP
        - name: http
          containerPort: 8081
          protocol: TCP
        - name: https-webhook
          containerPort: 8443
          protocol: TCP
        livenessProbe:
          initialDelaySeconds: 30
          timeoutSeconds: 30
          httpGet:
            path: /healthz
            port: http
        readinessProbe:
          timeoutSeconds: 30
          httpGet:
            path: /readyz
            port: http
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 1
            memory: 1Gi
      nodeSelector:
        kubernetes.io/os: linux
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: karpenter.sh/provisioner-name
                operator: DoesNotExist
            - matchExpressions:
              - key: eks.amazonaws.com/nodegroup
                operator: In
                values:
                - ecommerce-ng-public-01
      tolerations:
      - key: CriticalAddonsOnly
        operator: Exists
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app.kubernetes.io/name: karpenter
            app.kubernetes.io/instance: karpenter
---
# Source: karpenter/templates/webhooks-core.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: defaulting.webhook.karpenter.sh
  labels:
    helm.sh/chart: karpenter-v0.25.0
    app.kubernetes.io/name: karpenter
    app.kubernetes.io/instance: karpenter
    app.kubernetes.io/version: "0.25.0"
    app.kubernetes.io/managed-by: Helm
webhooks:
- name: defaulting.webhook.karpenter.sh
  admissionReviewVersions: ["v1"]
  clientConfig:
    service:
      name: karpenter
      namespace: karpenter
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - karpenter.sh
    apiVersions:
    - v1alpha5
    resources:
    - provisioners
    - provisioners/status
    operations:
    - CREATE
    - UPDATE
---
# Source: karpenter/templates/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: defaulting.webhook.karpenter.k8s.aws
  labels:
    helm.sh/chart: karpenter-v0.25.0
    app.kubernetes.io/name: karpenter
    app.kubernetes.io/instance: karpenter
    app.kubernetes.io/version: "0.25.0"
    app.kubernetes.io/managed-by: Helm
webhooks:
- name: defaulting.webhook.karpenter.k8s.aws
  admissionReviewVersions: ["v1"]
  clientConfig:
    service:
      name: karpenter
      namespace: karpenter
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - karpenter.k8s.aws
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - awsnodetemplates
    - awsnodetemplates/status
    scope: '*'
  - apiGroups:
    - karpenter.sh
    apiVersions:
    - v1alpha5
    resources:
    - provisioners
    - provisioners/status
    operations:
    - CREATE
    - UPDATE
---
# Source: karpenter/templates/webhooks-core.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation.webhook.karpenter.sh
  labels:
    helm.sh/chart: karpenter-v0.25.0
    app.kubernetes.io/name: karpenter
    app.kubernetes.io/instance: karpenter
    app.kubernetes.io/version: "0.25.0"
    app.kubernetes.io/managed-by: Helm
webhooks:
- name: validation.webhook.karpenter.sh
  admissionReviewVersions: ["v1"]
  clientConfig:
    service:
      name: karpenter
      namespace: karpenter
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - karpenter.sh
    apiVersions:
    - v1alpha5
    resources:
    - provisioners
    - provisioners/status
    operations:
    - CREATE
    - UPDATE
---
# Source: karpenter/templates/webhooks-core.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation.webhook.config.karpenter.sh
  labels:
    helm.sh/chart: karpenter-v0.25.0
    app.kubernetes.io/name: karpenter
    app.kubernetes.io/instance: karpenter
    app.kubernetes.io/version: "0.25.0"
    app.kubernetes.io/managed-by: Helm
webhooks:
- name: validation.webhook.config.karpenter.sh
  admissionReviewVersions: ["v1"]
  clientConfig:
    service:
      name: karpenter
      namespace: karpenter
  failurePolicy: Fail
  sideEffects: None
  objectSelector:
    matchLabels:
      app.kubernetes.io/part-of: karpenter
---
# Source: karpenter/templates/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation.webhook.karpenter.k8s.aws
  labels:
    helm.sh/chart: karpenter-v0.25.0
    app.kubernetes.io/name: karpenter
    app.kubernetes.io/instance: karpenter
    app.kubernetes.io/version: "0.25.0"
    app.kubernetes.io/managed-by: Helm
webhooks:
- name: validation.webhook.karpenter.k8s.aws
  admissionReviewVersions: ["v1"]
  clientConfig:
    service:
      name: karpenter
      namespace: karpenter
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - karpenter.k8s.aws
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - awsnodetemplates
    - awsnodetemplates/status
    scope: '*'
  - apiGroups:
    - karpenter.sh
    apiVersions:
    - v1alpha5
    resources:
    - provisioners
    - provisioners/status
    operations:
    - CREATE
    - UPDATE
